--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,5 @@ jobs:
         name: Build PyTorch Container
         steps:
           - name: Run Build
-            id: compile container
+            id: compile_container
             uses: actions/pytorch_container
